--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,24 @@
 repos:
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
     hooks:
-    - id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/asottile/seed-isort-config
+    rev: v1.9.3
     hooks:
-    - id: isort
-- repo: https://github.com/ambv/black
-  rev: 22.10.0
-  hooks:
-    - id: black
-      name: "Black formatting"
-      language: system
-      types: [file, python]
-      entry: "black"
-      args: [--safe, "--line-length=79"]
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
-  hooks:
-    - id: check-docstring-first
-- repo: https://github.com/PyCQA/flake8
-  rev: 6.0.0
-  hooks:
-    - id: flake8
-      language_version: python3.8
-- repo: https://github.com/pre-commit/mirrors-autopep8
-  rev: v2.0.0
-  hooks:
-    - id: autopep8
-
+      - id: seed-isort-config
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.21
+    hooks:
+      - id: isort
+  - repo: https://github.com/psf/black
+    rev: 19.10b0
+    hooks:
+      - id: black
+        language_version: python3.6
+  - repo: https://github.com/pycqa/flake8
+    rev: 3.8.3
+    hooks:
+      - id: flake8
