--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,10 +5,10 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
-    hooks:
-      - id: seed-isort-config
+  # - repo: https://github.com/asottile/seed-isort-config
+  #   rev: v1.9.3
+  #   hooks:
+  #     - id: seed-isort-config
   - repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
     hooks:
