--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,6 @@ min detection confidence: 0.5
 min tracking confidence: 0.5
 takeoff altitude: 5
 duration: 0.1
+pitch target: 30
+roll target: 30
+yaw target: 45
